--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 	--bg-color: hsl(0, 0%, 86%);
 	--black-color: hsl(0, 0%, 8%);
 	--error-color: hsl(0, 100%, 67%);
-
 	--main-transition: 0.3s;
 }
 
@@ -12,13 +11,16 @@ body {
 	font-family: "Poppins", sans-serif;
 	background-color: var(--bg-color) !important;
 }
+
 a {
 	text-decoration: none;
 	color: inherit;
 }
+
 body .container {
 	min-height: 100vh;
 }
+
 form {
 	min-width: 50%;
 	background-color: white;
@@ -27,6 +29,7 @@ form {
 	border-bottom-right-radius: 16px;
 	border-bottom-right-radius: 25%;
 }
+
 form .header {
 	display: flex;
 	justify-content: start;
@@ -34,9 +37,11 @@ form .header {
 	border-bottom: 1px solid var(--bg-color);
 	padding-bottom: 40px;
 }
+
 form .header .custom-input {
 	margin-right: 20px;
 }
+
 form .header input {
 	padding: 7px 15px;
 	width: 130px;
@@ -47,6 +52,7 @@ form .header input {
 	font-size: 23px;
 	transition: all var(--main-transition) ease-in-out;
 }
+
 form .header .error {
 	opacity: 0;
 	transition: all var(--main-transition) ease-in-out;
@@ -55,18 +61,22 @@ form .header .error {
 	font-size: 13px;
 	color: var(--error-color);
 }
+
 form .header input::placeholder {
 	transition: all var(--main-transition) ease-in-out;
 	opacity: 1;
 	color: gray;
 }
+
 form .header input:focus::placeholder {
 	opacity: 0;
 }
+
 form .header input:focus,
 form .header input:hover {
 	border-color: var(--color-one);
 }
+
 form .header h2 {
 	font-size: 16px;
 	color: gray;
@@ -75,6 +85,7 @@ form .header h2 {
 	text-transform: uppercase;
 	transition: all var(--main-transition) ease-in-out;
 }
+
 .submit {
 	width: 75px;
 	height: 75px;
@@ -90,24 +101,59 @@ form .header h2 {
 	transition: all var(--main-transition) ease-in-out;
 	border: none;
 }
+
 .submit:hover i {
 	animation: fadeInDown;
 	animation-delay: 0.5s;
 	animation-duration: 1s;
 }
+
 .submit:hover {
 	background-color: var(--black-color);
 }
+
 form .result .item {
 	display: flex;
 }
+
 form .result .item h2 {
 	font-size: 85px;
 	font-weight: bold;
 	color: var(--black-color);
 }
+
 form .result .item h2:nth-of-type(1) {
 	color: var(--color-one);
 	font-style: italic;
 	letter-spacing: 8px;
+}
+
+/* Media Queries */
+
+/* Phones */
+@media only screen and (max-width: 480px) {
+	form {
+		min-width: 100%;
+		padding: 23px 26px;
+	}
+	form .header .custom-input {
+		margin-right: 14px;
+	}
+	form .header input {
+		width: 100%;
+	}
+	form .header .error {
+		font-size: 12px;
+		min-height: 30px;
+	}
+	form .result .item h2 {
+		font-size: 65px;
+	}
+	.submit {
+		width: 65px;
+		height: 65px;
+		right: auto;
+		right: 50%; /* Position the element to the right side */
+		margin-right: -37.5px; /* Half of the width to offset the element to the center */
+	}
 }
